--- a/source/posts/2014/08-31-podcast-02-29.md.erb
+++ b/source/posts/2014/08-31-podcast-02-29.md.erb
@@ -19,6 +19,8 @@ main_image: "/images/static/02/0229.png"
  - [The Lesser-known Features in Rails 4.2](http://www.justinweiss.com/blog/2014/08/25/the-lesser-known-features-in-rails-4-dot-2/)
  - [Optimizing Elasticsearch Searches](https://www.found.no/foundation/optimizing-elasticsearch-searches/)
  - [The metal](https://github.com/tenderlove/the_metal)
+ - [I Spent 3 Days With Sandi Metz – Here’s What I Learned](http://red-badger.com/blog/2014/08/20/i-spent-3-days-with-sandi-metz-heres-what-i-learned/)
+ - [Ruby version usage in commercial projects, 2014 edition](https://semaphoreapp.com/blog/2014/08/27/ruby-version-usage-in-commercial-projects-2014-edition.html)
 
 
 ## JavaScript
