--- a/source/posts/2014/08-31-podcast-02-29.md.erb
+++ b/source/posts/2014/08-31-podcast-02-29.md.erb
@@ -27,6 +27,8 @@ main_image: "/images/static/02/0229.png"
 
  - [Knockout 3.2.0](http://blog.stevensanderson.com/2014/08/18/knockout-3-2-0-released/)
  - [CoffeeScript 1.8.0](https://github.com/jashkenas/coffeescript/releases/tag/1.8.0)
+ - [Underscore.js 1.7.0](http://underscorejs.org/#changelog)
+ - [Ember 1.7.0 and 1.8 beta](http://emberjs.com/blog/2014/08/23/ember-1-7-0-released.html)
  - [Duo.js - a next-generation package manager for the front-end](http://duojs.org/)
  - [Barekit - a front-end project starter](http://a2labs.github.io/barekit/)
  - [Detect if a Function is Native Code with JavaScript](http://davidwalsh.name/detect-native-function)
@@ -34,6 +36,7 @@ main_image: "/images/static/02/0229.png"
  - [Pixi-editor - Pixi.js based simple image editor](http://antirek.github.io/pixi-editor/)
  - [JSON Resume](http://jsonresume.org/)
  - [Flux](http://facebook.github.io/flux/docs/overview.html#content)
+ - [Black Box Driven Development in JavaScript](https://hacks.mozilla.org/2014/08/black-box-driven-development-in-javascript/)
 
 READMORE
 
