--- a/source/posts/2014/08-31-podcast-02-29.md.erb
+++ b/source/posts/2014/08-31-podcast-02-29.md.erb
@@ -16,6 +16,7 @@ main_image: "/images/static/02/0229.png"
 
 ## Ruby
 
+ - [Discourse 1.0](http://blog.discourse.org/2014/08/introducing-discourse-1-0/)
  - [The Lesser-known Features in Rails 4.2](http://www.justinweiss.com/blog/2014/08/25/the-lesser-known-features-in-rails-4-dot-2/)
  - [Optimizing Elasticsearch Searches](https://www.found.no/foundation/optimizing-elasticsearch-searches/)
  - [The metal](https://github.com/tenderlove/the_metal)
@@ -29,6 +30,7 @@ main_image: "/images/static/02/0229.png"
  - [CoffeeScript 1.8.0](https://github.com/jashkenas/coffeescript/releases/tag/1.8.0)
  - [Underscore.js 1.7.0](http://underscorejs.org/#changelog)
  - [Ember 1.7.0 and 1.8 beta](http://emberjs.com/blog/2014/08/23/ember-1-7-0-released.html)
+ - [Sass 3.4](http://blog.sass-lang.com/posts/221239-sass-34-is-released)
  - [Duo.js - a next-generation package manager for the front-end](http://duojs.org/)
  - [Barekit - a front-end project starter](http://a2labs.github.io/barekit/)
  - [Detect if a Function is Native Code with JavaScript](http://davidwalsh.name/detect-native-function)
