--- a/source/posts/2014/08-31-podcast-02-29.md.erb
+++ b/source/posts/2014/08-31-podcast-02-29.md.erb
@@ -18,27 +18,17 @@ main_image: "/images/static/02/0229.png"
 
  - [Discourse 1.0](http://blog.discourse.org/2014/08/introducing-discourse-1-0/)
  - [The Lesser-known Features in Rails 4.2](http://www.justinweiss.com/blog/2014/08/25/the-lesser-known-features-in-rails-4-dot-2/)
+ - [Reading Rails - TimeWithZone](http://monkeyandcrow.com/blog/reading_rails_time_with_zone/)
  - [Optimizing Elasticsearch Searches](https://www.found.no/foundation/optimizing-elasticsearch-searches/)
- - [The metal](https://github.com/tenderlove/the_metal)
- - [I Spent 3 Days With Sandi Metz – Here’s What I Learned](http://red-badger.com/blog/2014/08/20/i-spent-3-days-with-sandi-metz-heres-what-i-learned/)
- - [Ruby version usage in commercial projects, 2014 edition](https://semaphoreapp.com/blog/2014/08/27/ruby-version-usage-in-commercial-projects-2014-edition.html)
-
+ - [I Spent 3 Days With Sandi Metz – Here’s What I Learned](http://red-badger.com/blog/2014/08/20/i-spent-3-days-with-sandi-metz-heres-what-i-learned/) и [The metal](https://github.com/tenderlove/the_metal)
 
 ## JavaScript
 
- - [Knockout 3.2.0](http://blog.stevensanderson.com/2014/08/18/knockout-3-2-0-released/)
- - [CoffeeScript 1.8.0](https://github.com/jashkenas/coffeescript/releases/tag/1.8.0)
- - [Underscore.js 1.7.0](http://underscorejs.org/#changelog)
- - [Ember 1.7.0 and 1.8 beta](http://emberjs.com/blog/2014/08/23/ember-1-7-0-released.html)
- - [Sass 3.4](http://blog.sass-lang.com/posts/221239-sass-34-is-released)
- - [Duo.js - a next-generation package manager for the front-end](http://duojs.org/)
- - [Barekit - a front-end project starter](http://a2labs.github.io/barekit/)
- - [Detect if a Function is Native Code with JavaScript](http://davidwalsh.name/detect-native-function)
- - [Grabs - front-end development environment](http://grabs.in/)
- - [Pixi-editor - Pixi.js based simple image editor](http://antirek.github.io/pixi-editor/)
- - [JSON Resume](http://jsonresume.org/)
- - [Flux](http://facebook.github.io/flux/docs/overview.html#content)
+ - [Knockout 3.2.0](http://blog.stevensanderson.com/2014/08/18/knockout-3-2-0-released/), [CoffeeScript 1.8.0](https://github.com/jashkenas/coffeescript/releases/tag/1.8.0), [Underscore.js 1.7.0](http://underscorejs.org/#changelog), [Sass 3.4](http://blog.sass-lang.com/posts/221239-sass-34-is-released) и [Ember 1.7.0 and 1.8 beta](http://emberjs.com/blog/2014/08/23/ember-1-7-0-released.html)
  - [Black Box Driven Development in JavaScript](https://hacks.mozilla.org/2014/08/black-box-driven-development-in-javascript/)
+ - [Flux](http://facebook.github.io/flux/docs/overview.html#content)
+ - [Duo.js - a next-generation package manager for the front-end](http://duojs.org/), [Grabs - front-end development environment](http://grabs.in/) и [Barekit - a front-end project starter](http://a2labs.github.io/barekit/)
+ - [Pixi-editor - Pixi.js based simple image editor](http://antirek.github.io/pixi-editor/), [JSON Resume](http://jsonresume.org/) и [Chartist.js](http://gionkunz.github.io/chartist-js/)
 
 READMORE
 
