--- a/source/posts/2014/08-31-podcast-02-29.md.erb
+++ b/source/posts/2014/08-31-podcast-02-29.md.erb
@@ -1,6 +1,6 @@
 ---
-title: "29 выпуск 02 сезона.  и прочее"
-date: 2014-08-24
+title: "29 выпуск 02 сезона. Discourse 1.0, TimeWithZone, metal, Flux, Duo.js, JSON Resume и прочее"
+date: 2014-08-31
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/71/file/podfm_rwpod_my_28_71.mp3"
@@ -27,8 +27,8 @@ main_image: "/images/static/02/0229.png"
  - [Knockout 3.2.0](http://blog.stevensanderson.com/2014/08/18/knockout-3-2-0-released/), [CoffeeScript 1.8.0](https://github.com/jashkenas/coffeescript/releases/tag/1.8.0), [Underscore.js 1.7.0](http://underscorejs.org/#changelog), [Sass 3.4](http://blog.sass-lang.com/posts/221239-sass-34-is-released) и [Ember 1.7.0 and 1.8 beta](http://emberjs.com/blog/2014/08/23/ember-1-7-0-released.html)
  - [Black Box Driven Development in JavaScript](https://hacks.mozilla.org/2014/08/black-box-driven-development-in-javascript/)
  - [Flux](http://facebook.github.io/flux/docs/overview.html#content)
- - [Duo.js - a next-generation package manager for the front-end](http://duojs.org/), [Grabs - front-end development environment](http://grabs.in/) и [Barekit - a front-end project starter](http://a2labs.github.io/barekit/)
- - [Pixi-editor - Pixi.js based simple image editor](http://antirek.github.io/pixi-editor/), [JSON Resume](http://jsonresume.org/) и [Chartist.js](http://gionkunz.github.io/chartist-js/)
+ - [Duo.js](http://duojs.org/), [Grabs](http://grabs.in/) и [Barekit](http://a2labs.github.io/barekit/)
+ - [Pixi-editor](http://antirek.github.io/pixi-editor/), [JSON Resume](http://jsonresume.org/) и [Chartist.js](http://gionkunz.github.io/chartist-js/)
 
 READMORE
 
