--- a/source/posts/2014/09-07-podcast-02-30.md.erb
+++ b/source/posts/2014/09-07-podcast-02-30.md.erb
@@ -16,11 +16,18 @@ main_image: "/images/static/02/0230.png"
 
 ## Ruby
 
+ - [RSpec 3.1](http://myronmars.to/n/dev-blog/2014/09/rspec-3-1-has-been-released) и [Rails 4.2 new gems: active job and global id](http://dev.mikamai.com/post/96343027199/rails-4-2-new-gems-active-job-and-global-id)
+ - [Programming with Nothing](http://codon.com/programming-with-nothing)
+ - [7 steps to get started with Clean Architecture in Ruby](https://medium.com/@fbzga/clean-architecture-in-ruby-7eb3cd0fc145)
+ - [Ruby Ducks - Serialization Duck Type](http://monkeyandcrow.com/blog/ruby_ducks_serialization_duck_type/)
  - [Harpoon deploys static sites to S3](http://www.getharpoon.com/)
 
 ## JavaScript
 
-
+ - [TypeScript: The Bad Parts](http://j201.github.io/posts/2014-08-30-TypeScript-The-Bad-Parts.html)
+ - [Вы разрушили HTML](http://blog.dantup.com/2014/08/you-have-ruined-html/) и [Работает ли ваш адаптивный дизайн? Google Analytics в курсе](http://www.smashingmagazine.com/2014/08/28/responsive-web-design-google-analytics/)
+ - [JS Envy - try JS libraries in the console](http://jsenvy.com/) и [A Single Div — возможности CSS для стилизации всего лишь одного тега div](http://a.singlediv.com/)
+ - [Cross domain local storage](https://github.com/zendesk/cross-storage) и [Bedrock - a minimalist boilerplate for Express apps](http://tilomitra.github.io/bedrock/)
 
 READMORE
 
