--- a/source/posts/2014/09-07-podcast-02-30.md.erb
+++ b/source/posts/2014/09-07-podcast-02-30.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "30 выпуск 02 сезона.  и прочее"
+title: "30 выпуск 02 сезона. RSpec 3.1, Programming with Nothing, Serialization Duck Type, TypeScript: The Bad Parts, JS Envy и прочее"
 date: 2014-09-07
 tags:
  - podcasts
