--- a/source/posts/2014/09-08-podcast-02-30.md.erb
+++ b/source/posts/2014/09-08-podcast-02-30.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "30 выпуск 02 сезона. RSpec 3.1, Programming with Nothing, Serialization Duck Type, TypeScript: The Bad Parts, JS Envy и прочее"
-date: 2014-09-07
+date: 2014-09-08
 tags:
  - podcasts
 audio_url: "http://rwpod.podfm.ru/my/72/file/podfm_rwpod_my_29_72.mp3"
@@ -26,7 +26,7 @@ main_image: "/images/static/02/0230.png"
 
  - [TypeScript: The Bad Parts](http://j201.github.io/posts/2014-08-30-TypeScript-The-Bad-Parts.html) и [UILang](http://uilang.com/)
  - [Вы разрушили HTML](http://blog.dantup.com/2014/08/you-have-ruined-html/) и [Работает ли ваш адаптивный дизайн? Google Analytics в курсе](http://www.smashingmagazine.com/2014/08/28/responsive-web-design-google-analytics/)
- - [Introducing Blast.js](https://hacks.mozilla.org/2014/09/introducing-blast-js/), [Pioneerjs](http://pioneerjs.com/), [JS Envy - try JS libraries in the console](http://jsenvy.com/) и [A Single Div — возможности CSS для стилизации всего лишь одного тега div](http://a.singlediv.com/)
+ - [Introducing Blast.js](https://hacks.mozilla.org/2014/09/introducing-blast-js/), [Pioneerjs](http://pioneerjs.com/), [JS Envy - try JS libraries in the console](http://jsenvy.com/) и [A Single Div](http://a.singlediv.com/)
  - [Cross domain local storage](https://github.com/zendesk/cross-storage), [Horizonal.js](http://www.michaelbromley.co.uk/horizonal/demo/) и [Bedrock - a minimalist boilerplate for Express apps](http://tilomitra.github.io/bedrock/)
 
 READMORE
