--- a/source/posts/2014/09-12-podcast-02-31.md.erb
+++ b/source/posts/2014/09-12-podcast-02-31.md.erb
@@ -17,23 +17,18 @@ main_image: "/images/static/02/0231.png"
 ## Ruby
 
  - [Elixir 1.0.0](https://github.com/elixir-lang/elixir/releases/tag/v1.0.0)
- - [An Introduction To Pry, A Ruby REPL](http://christopherdbui.com/an-introduction-to-pry-a-ruby-repl/)
- - [Continuous Deployment of DNS Records with DNSimple](http://blog.codeship.io/2014/09/09/continuous-deployment-of-dns-records-with-dnsimple.html)
+ - [An Introduction To Pry, A Ruby REPL](http://christopherdbui.com/an-introduction-to-pry-a-ruby-repl/) и [Rails 5, Module prepend and the End of alias\_method\_chain](http://www.justinweiss.com/blog/2014/09/08/rails-5-module-number-prepend-and-the-end-of-alias-method-chain/)
+ - [Write Reliable, Asynchronous Integration Tests With Capybara](http://robots.thoughtbot.com/write-reliable-asynchronous-integration-tests-with-capybara) и [Continuous Deployment of DNS Records with DNSimple](http://blog.codeship.io/2014/09/09/continuous-deployment-of-dns-records-with-dnsimple.html)
+ - [Software is no longer soft](https://blog.engineyard.com/2014/software-is-not-soft)
  - [Rack-Tracker](https://github.com/railslove/rack-tracker)
 
 ## JavaScript
 
  - [AMCSS - Attribute Modules for CSS](http://amcss.github.io/) и [Introducing AM - Attribute Modules for CSS](http://glenmaddern.com/articles/introducing-am-css)
- - [Fontface Ninja](http://www.fontface.ninja/)
- - [Bézier Clock](http://jackf.net/bezier-clock/)
- - [Espruino - JavaScript on Board](http://www.espruino.com/)
- - [Froala - jQuery WYSIWYG Editor](http://editor.froala.com/)
- - [Stylie — песочница для тестирования анимаций](http://jeremyckahn.github.io/stylie/)
  - [Naming CSS Stuff Is Really Hard](http://seesparkbox.com/foundry/naming_css_stuff_is_really_hard)
- - [Fibonacci Flexbox Composer](http://maxsteenbergen.com/fibonacci/)
- - [Plain Pattern — инструмент для создание векторных паттернов](http://www.kennethcachia.com/plain-pattern/)
- - [Hello.js](http://adodson.com/hello.js/)
-
+ - [Fibonacci Flexbox Composer](http://maxsteenbergen.com/fibonacci/), [Bézier Clock](http://jackf.net/bezier-clock/) и [Fontface Ninja](http://www.fontface.ninja/)
+ - [Espruino - JavaScript on Board](http://www.espruino.com/), [Hello.js](http://adodson.com/hello.js/) и [Froala - jQuery WYSIWYG Editor](http://editor.froala.com/)
+ - [Stylie — песочница для тестирования анимаций](http://jeremyckahn.github.io/stylie/) и [Plain Pattern — инструмент для создание векторных паттернов](http://www.kennethcachia.com/plain-pattern/)
 
 READMORE
 
