sorted news with logo

--- a/source/posts/2014/09-12-podcast-02-31.md.erb
+++ b/source/posts/2014/09-12-podcast-02-31.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "31 выпуск 02 сезона.  и прочее"
+title: "31 выпуск 02 сезона. Elixir 1.0.0, Asynchronous Integration Tests With Capybara, AMCSS, Fontface Ninja, Stylie и прочее"
 date: 2014-09-12
 tags:
  - podcasts
