--- a/source/posts/2014/09-12-podcast-02-31.md.erb
+++ b/source/posts/2014/09-12-podcast-02-31.md.erb
@@ -25,8 +25,8 @@ main_image: "/images/static/02/0231.png"
 ## JavaScript
 
  - [AMCSS - Attribute Modules for CSS](http://amcss.github.io/) и [Introducing AM - Attribute Modules for CSS](http://glenmaddern.com/articles/introducing-am-css)
- - [Naming CSS Stuff Is Really Hard](http://seesparkbox.com/foundry/naming_css_stuff_is_really_hard)
- - [Fibonacci Flexbox Composer](http://maxsteenbergen.com/fibonacci/), [Bézier Clock](http://jackf.net/bezier-clock/) и [Fontface Ninja](http://www.fontface.ninja/)
+ - [Naming CSS Stuff Is Really Hard](http://seesparkbox.com/foundry/naming_css_stuff_is_really_hard) и [Fibonacci Flexbox Composer](http://maxsteenbergen.com/fibonacci/)
+ - [Bézier Clock](http://jackf.net/bezier-clock/) и [Fontface Ninja](http://www.fontface.ninja/)
  - [Espruino - JavaScript on Board](http://www.espruino.com/), [Hello.js](http://adodson.com/hello.js/) и [Froala - jQuery WYSIWYG Editor](http://editor.froala.com/)
  - [Stylie — песочница для тестирования анимаций](http://jeremyckahn.github.io/stylie/) и [Plain Pattern — инструмент для создание векторных паттернов](http://www.kennethcachia.com/plain-pattern/)
 
