--- a/source/posts/2014/09-19-podcast-02-32.md.erb
+++ b/source/posts/2014/09-19-podcast-02-32.md.erb
@@ -16,6 +16,8 @@ main_image: "/images/static/02/0232.png"
 
 ## Ruby
 
+ - [Ruby - the bad parts](http://www.amberbit.com/blog/2014/9/9/ruby-the-bad-parts/)
+
 ## JavaScript
 
  - [Firefox Add-on Enables Web Development Across Browsers and Devices](https://hacks.mozilla.org/2014/09/firefox-tools-adapter/)
