--- a/source/posts/2014/09-19-podcast-02-32.md.erb
+++ b/source/posts/2014/09-19-podcast-02-32.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "31 выпуск 02 сезона. Elixir 1.0.0, Asynchronous Integration Tests With Capybara, AMCSS, Fontface Ninja, Stylie и прочее"
+title: "32 выпуск 02 сезона.  и прочее"
 date: 2014-09-19
 tags:
  - podcasts
@@ -25,6 +25,7 @@ main_image: "/images/static/02/0232.png"
  - [Introducing Normalize-OpenType.css](http://kennethormandy.com/journal/normalize-opentype-css)
  - [iHover](http://gudh.github.io/ihover/dist/index.html)
  - [Learning Gulp](http://hmphry.com/gulp/)
+ - [KaTeX](http://khan.github.io/KaTeX/)
 
 READMORE
 
