--- a/source/posts/2014/09-19-podcast-02-32.md.erb
+++ b/source/posts/2014/09-19-podcast-02-32.md.erb
@@ -16,7 +16,10 @@ main_image: "/images/static/02/0232.png"
 
 ## Ruby
 
+ - [Volt framework](http://voltframework.com/)
  - [Ruby - the bad parts](http://www.amberbit.com/blog/2014/9/9/ruby-the-bad-parts/)
+ - [Understanding Rails protect\_from\_forgery](http://blog.nvisium.com/2014/09/understanding-protectfromforgery.html)
+ - [Upmin Admin](https://www.upmin.com/admin-rails)
 
 ## JavaScript
 
@@ -26,6 +29,7 @@ main_image: "/images/static/02/0232.png"
  - [iHover](http://gudh.github.io/ihover/dist/index.html)
  - [Learning Gulp](http://hmphry.com/gulp/)
  - [KaTeX](http://khan.github.io/KaTeX/)
+ - [Getting Started with CSS Shapes](http://www.html5rocks.com/en/tutorials/shapes/getting-started/)
 
 READMORE
 
