--- a/source/posts/2014/09-22-podcast-02-32.md.erb
+++ b/source/posts/2014/09-22-podcast-02-32.md.erb
@@ -1,13 +1,13 @@
 ---
 title: "32 выпуск 02 сезона. Ruby 2.2.0-preview1, Ruby - the bad parts, Volt framework, Normalize-OpenType.css, iHover, KaTeX и прочее"
-date: 2014-09-20
+date: 2014-09-22
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/74/file/podfm_rwpod_my_31_74.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/02.31/0231.mp3"
+audio_url: "http://rwpod.podfm.ru/my/75/file/podfm_rwpod_my_32_75.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/02.32/0232.mp3"
 audio_format: "audio/mpeg"
-audio_length: 49405150
-duration: "00:51:24"
+audio_length: 47991974
+duration: "00:49:56"
 small_icon: mic
 main_image: "/images/static/02/0232.png"
 ---
@@ -25,7 +25,7 @@ main_image: "/images/static/02/0232.png"
 
  - [Firefox Add-on Enables Web Development Across Browsers and Devices](https://hacks.mozilla.org/2014/09/firefox-tools-adapter/)
  - [Built-in Browser Support for Responsive Images](http://www.html5rocks.com/en/tutorials/responsive/picture-element/) и [Introducing Normalize-OpenType.css](http://kennethormandy.com/journal/normalize-opentype-css)
- - [Getting Started with CSS Shapes](http://www.html5rocks.com/en/tutorials/shapes/getting-started/) [Comcastifyjs](http://theonion.github.io/comcastifyjs/)
+ - [Getting Started with CSS Shapes](http://www.html5rocks.com/en/tutorials/shapes/getting-started/) и [Comcastifyjs](http://theonion.github.io/comcastifyjs/)
  - [Learning Gulp](http://hmphry.com/gulp/), [iHover](http://gudh.github.io/ihover/dist/index.html) и [KaTeX](http://khan.github.io/KaTeX/)
 
 READMORE
