--- a/source/posts/2014/09-28-podcast-02-33.md.erb
+++ b/source/posts/2014/09-28-podcast-02-33.md.erb
@@ -20,7 +20,7 @@ main_image: "/images/static/02/0233.png"
 
 ## JavaScript
 
-
+ - [NPM 2.0.0](http://blog.npmjs.org/post/98131109725/npm-2-0-0)
 
 READMORE
 
