--- a/source/posts/2014/09-28-podcast-02-33.md.erb
+++ b/source/posts/2014/09-28-podcast-02-33.md.erb
@@ -17,10 +17,13 @@ main_image: "/images/static/02/0233.png"
 ## Ruby
 
  - [20,000 Leagues Under ActiveRecord](http://patshaughnessy.net/2014/9/17/20000-leagues-under-activerecord)
+ - [Toshi - an open source Bitcoin node built to power large scale web applications](https://toshi.io/)
+ - [Byebug](https://github.com/deivid-rodriguez/byebug)
 
 ## JavaScript
 
  - [NPM 2.0.0](http://blog.npmjs.org/post/98131109725/npm-2-0-0)
+ - [Don’t use &lt;picture&gt; (most of the time)](http://blog.cloudfour.com/dont-use-picture-most-of-the-time/)
 
 READMORE
 
