--- a/source/posts/2014/09-28-podcast-02-33.md.erb
+++ b/source/posts/2014/09-28-podcast-02-33.md.erb
@@ -18,7 +18,10 @@ main_image: "/images/static/02/0233.png"
 
  - [20,000 Leagues Under ActiveRecord](http://patshaughnessy.net/2014/9/17/20000-leagues-under-activerecord)
  - [Toshi - an open source Bitcoin node built to power large scale web applications](https://toshi.io/)
+ - [Automatic eager loading in rails](http://blog.salsify.com/engineering/automatic-eager-loading-rails)
+ - [ActiveRecord Eager Loading with Query Objects and Decorators](http://robots.thoughtbot.com/active-record-eager-loading-with-query-objects-and-decorators)
  - [Byebug](https://github.com/deivid-rodriguez/byebug)
+ - [Airborne](https://github.com/brooklynDev/airborne)
 
 ## JavaScript
 
