--- a/source/posts/2014/09-28-podcast-02-33.md.erb
+++ b/source/posts/2014/09-28-podcast-02-33.md.erb
@@ -27,6 +27,7 @@ main_image: "/images/static/02/0233.png"
 
  - [NPM 2.0.0](http://blog.npmjs.org/post/98131109725/npm-2-0-0)
  - [Don’t use &lt;picture&gt; (most of the time)](http://blog.cloudfour.com/dont-use-picture-most-of-the-time/)
+ - [Update on jQuery.com Compromises](http://blog.jquery.com/2014/09/24/update-on-jquery-com-compromises/)
 
 READMORE
 
