--- a/source/posts/2014/09-28-podcast-02-33.md.erb
+++ b/source/posts/2014/09-28-podcast-02-33.md.erb
@@ -17,9 +17,11 @@ main_image: "/images/static/02/0233.png"
 ## Ruby
 
  - [20,000 Leagues Under ActiveRecord](http://patshaughnessy.net/2014/9/17/20000-leagues-under-activerecord)
+ - [How Arel Converts Ruby Queries Into SQL Statements](http://patshaughnessy.net/2014/9/23/how-arel-converts-ruby-queries-into-sql-statements)
  - [Toshi - an open source Bitcoin node built to power large scale web applications](https://toshi.io/)
  - [Automatic eager loading in rails](http://blog.salsify.com/engineering/automatic-eager-loading-rails)
  - [ActiveRecord Eager Loading with Query Objects and Decorators](http://robots.thoughtbot.com/active-record-eager-loading-with-query-objects-and-decorators)
+ - [Rebuilding Capistrano like deployment with Ansible](http://blog.versioneye.com/2014/09/24/rebuilding-capistrano-like-deployment-with-ansible/)
  - [Byebug](https://github.com/deivid-rodriguez/byebug)
  - [Airborne](https://github.com/brooklynDev/airborne)
 
