--- a/source/posts/2014/09-28-podcast-02-33.md.erb
+++ b/source/posts/2014/09-28-podcast-02-33.md.erb
@@ -18,6 +18,7 @@ main_image: "/images/static/02/0233.png"
 
  - [20,000 Leagues Under ActiveRecord](http://patshaughnessy.net/2014/9/17/20000-leagues-under-activerecord)
  - [How Arel Converts Ruby Queries Into SQL Statements](http://patshaughnessy.net/2014/9/23/how-arel-converts-ruby-queries-into-sql-statements)
+ - [Validating JSON Schemas with an RSpec Matcher](http://robots.thoughtbot.com/validating-json-schemas-with-an-rspec-matcher)
  - [Toshi - an open source Bitcoin node built to power large scale web applications](https://toshi.io/)
  - [Automatic eager loading in rails](http://blog.salsify.com/engineering/automatic-eager-loading-rails)
  - [ActiveRecord Eager Loading with Query Objects and Decorators](http://robots.thoughtbot.com/active-record-eager-loading-with-query-objects-and-decorators)
@@ -30,6 +31,7 @@ main_image: "/images/static/02/0233.png"
  - [NPM 2.0.0](http://blog.npmjs.org/post/98131109725/npm-2-0-0)
  - [Don’t use &lt;picture&gt; (most of the time)](http://blog.cloudfour.com/dont-use-picture-most-of-the-time/)
  - [Update on jQuery.com Compromises](http://blog.jquery.com/2014/09/24/update-on-jquery-com-compromises/)
+ - [Waves.js — text animation in javascript](http://mateogianolio.github.io/waves-js/)
 
 READMORE
 
