--- a/source/posts/2014/09-28-podcast-02-33.md.erb
+++ b/source/posts/2014/09-28-podcast-02-33.md.erb
@@ -32,6 +32,10 @@ main_image: "/images/static/02/0233.png"
  - [Don’t use &lt;picture&gt; (most of the time)](http://blog.cloudfour.com/dont-use-picture-most-of-the-time/)
  - [Update on jQuery.com Compromises](http://blog.jquery.com/2014/09/24/update-on-jquery-com-compromises/)
  - [Waves.js — text animation in javascript](http://mateogianolio.github.io/waves-js/)
+ - [Bootstrap vs. Foundation: Which Framework is Better?](http://bootstrapbay.com/blog/bootstrap-vs-foundation/)
+ - [Pageres — генерация скриншотов сайтов в различных разрешениях](https://github.com/sindresorhus/pageres)
+ - [Kefir.js](http://pozadi.github.io/kefir/)
+ - [CriticalCSS](https://github.com/filamentgroup/criticalCSS)
 
 READMORE
 
