--- a/source/posts/2014/09-30-podcast-02-33.md.erb
+++ b/source/posts/2014/09-30-podcast-02-33.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "33 выпуск 02 сезона. и прочее"
+title: "33 выпуск 02 сезона. 20000 Leagues Under ActiveRecord, Automatic eager loading in rails, Toshi, NPM 2.0.0, Waves.js, Kefir.js и прочее"
 date: 2014-09-30
 tags:
  - podcasts
