--- a/source/posts/2014/10-03-podcast-02-33.md.erb
+++ b/source/posts/2014/10-03-podcast-02-33.md.erb
@@ -32,6 +32,10 @@ main_image: "/images/static/02/0233.png"
  - [Waves.js — text animation in javascript](http://mateogianolio.github.io/waves-js/), [Midnight.js](http://aerolab.github.io/midnight.js/) и [Pageres](https://github.com/sindresorhus/pageres)
  - [Kefir.js](http://pozadi.github.io/kefir/), [Project Ramda](http://ramdajs.com/) и [CriticalCSS](https://github.com/filamentgroup/criticalCSS)
 
+## Событие
+
+ - [Garage48 Lviv 2014](http://garage48.org/lviv)
+
 
 READMORE
 
