--- a/source/posts/2014/10-03-podcast-02-33.md.erb
+++ b/source/posts/2014/10-03-podcast-02-33.md.erb
@@ -26,7 +26,7 @@ main_image: "/images/static/02/0233.png"
 ## JavaScript
 
  - [NPM 2.0.0](http://blog.npmjs.org/post/98131109725/npm-2-0-0) и [Update on jQuery.com Compromises](http://blog.jquery.com/2014/09/24/update-on-jquery-com-compromises/)
- - [Bootstrap vs. Foundation: Which Framework is Better?](http://bootstrapbay.com/blog/bootstrap-vs-foundation/), [The Role of Utility Classes in Scalable CSS](http://davidtheclark.com/on-utility-classes/) и [Don’t use &lt;picture&gt; (most of the time)](http://blog.cloudfour.com/dont-use-picture-most-of-the-time/)
+ - [Bootstrap vs. Foundation: Which Framework is Better?](http://bootstrapbay.com/blog/bootstrap-vs-foundation/) и [Don’t use &lt;picture&gt; (most of the time)](http://blog.cloudfour.com/dont-use-picture-most-of-the-time/)
  - [Vulcan: Inspect your database in your browser](https://www.firebase.com/blog/2014-09-30-vulcan.html) и [Leaflet.FreeDraw — рисуем слои поверх карты](http://freedraw.herokuapp.com/)
  - [JavaScript hacks explained](http://blog.mdnbar.com/javascript-common-tricks) и [Mobile Web App Checklist](http://www.luster.io/blog/9-29-14-mobile-web-checklist.html)
  - [Waves.js — text animation in javascript](http://mateogianolio.github.io/waves-js/), [Midnight.js](http://aerolab.github.io/midnight.js/) и [Pageres](https://github.com/sindresorhus/pageres)
