--- a/source/posts/2014/10-13-podcast-02-34.md.erb
+++ b/source/posts/2014/10-13-podcast-02-34.md.erb
@@ -17,25 +17,16 @@ main_image: "/images/static/02/0234.png"
 ## Ruby
 
  - [Top 8 tools for Ruby on Rails code optimization and cleanup](https://www.infinum.co/the-capsized-eight/articles/top-8-tools-for-ruby-on-rails-code-optimization-and-cleanup)
- - [Adding a staging environment to Rails](http://emaxime.com/2014/adding-a-staging-environment-to-rails.html)
- - [Refactoring Ruby with Monads](http://codon.com/refactoring-ruby-with-monads)
- - [Decorator Pattern in Ruby](http://nithinbekal.com/posts/ruby-decorators/)
- - [Presenters in Rails](http://nithinbekal.com/posts/rails-presenters/)
- - [Observer Pattern in RUBY](https://medium.com/@mitchocail/observer-pattern-in-ruby-e80ac3c1dac7)
- - [Pronto](https://github.com/mmozuras/pronto)
- - [Verse 2.0 - network protocol for real-time sharing between graphical applications](http://verse.github.io/)
+ - [Adding a staging environment to Rails](http://emaxime.com/2014/adding-a-staging-environment-to-rails.html) и [Refactoring Ruby with Monads](http://codon.com/refactoring-ruby-with-monads)
+ - [Decorator Pattern in Ruby](http://nithinbekal.com/posts/ruby-decorators/), [Presenters in Rails](http://nithinbekal.com/posts/rails-presenters/) и [Observer Pattern in Ruby](https://medium.com/@mitchocail/observer-pattern-in-ruby-e80ac3c1dac7)
+ - [Pronto](https://github.com/mmozuras/pronto) и [Verse 2.0 - network protocol for real-time sharing between graphical applications](http://verse.github.io/)
 
 ## JavaScript
 
- - [Basscss](http://www.basscss.com/)
- - [Explorations In Automatically Fixing JavaScript Linting-errors](http://addyosmani.com/blog/fixmyjs/)
- - [Slick.js](http://kenwheeler.github.io/slick/)
- - [Strip.js](http://www.stripjs.com/)
- - [FKit](http://nullobject.github.io/fkit/)
- - [Nightmare.js](http://www.nightmarejs.org/)
- - [Virt.js](http://virtjs.com/)
+ - [What’s wrong with Angular.js](https://medium.com/este-js-framework/whats-wrong-with-angular-js-97b0a787f903) и [Explorations In Automatically Fixing JavaScript Linting-errors](http://addyosmani.com/blog/fixmyjs/)
+ - [Basscss](http://www.basscss.com/), [Slick.js](http://kenwheeler.github.io/slick/) и [Strip.js](http://www.stripjs.com/)
+ - [FKit](http://nullobject.github.io/fkit/), [Nightmare.js](http://www.nightmarejs.org/) и [Virt.js](http://virtjs.com/)
  - [Mary live-codes a JavaScript game from scratch – Mary Rose Cook](http://vimeo.com/105955605)
- - [What’s wrong with Angular.js](https://medium.com/este-js-framework/whats-wrong-with-angular-js-97b0a787f903)
 
 
 READMORE
