--- a/source/posts/2014/10-13-podcast-02-34.md.erb
+++ b/source/posts/2014/10-13-podcast-02-34.md.erb
@@ -26,7 +26,7 @@ main_image: "/images/static/02/0234.png"
  - [What’s wrong with Angular.js](https://medium.com/este-js-framework/whats-wrong-with-angular-js-97b0a787f903) и [Explorations In Automatically Fixing JavaScript Linting-errors](http://addyosmani.com/blog/fixmyjs/)
  - [Basscss](http://www.basscss.com/), [Slick.js](http://kenwheeler.github.io/slick/) и [Strip.js](http://www.stripjs.com/)
  - [FKit](http://nullobject.github.io/fkit/), [Nightmare.js](http://www.nightmarejs.org/) и [Virt.js](http://virtjs.com/)
- - [Mary live-codes a JavaScript game from scratch – Mary Rose Cook](http://vimeo.com/105955605)
+ - [Nunjucks](http://mozilla.github.io/nunjucks/) и [Mary live-codes a JavaScript game from scratch – Mary Rose Cook](http://vimeo.com/105955605)
 
 
 READMORE
