--- a/source/posts/2014/10-13-podcast-02-34.md.erb
+++ b/source/posts/2014/10-13-podcast-02-34.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "34 выпуск 02 сезона. и прочее"
+title: "34 выпуск 02 сезона. Adding a staging environment to Rails, Decorator Pattern in Ruby, Pronto, Basscss, FKit, Nunjucks и прочее"
 date: 2014-10-13
 tags:
  - podcasts
