--- a/source/posts/2014/10-17-podcast-02-35.md.erb
+++ b/source/posts/2014/10-17-podcast-02-35.md.erb
@@ -19,7 +19,11 @@ main_image: "/images/static/02/0235.png"
 
 ## JavaScript
 
+ - [Javascript: best practices part 1](http://www.thinkful.com/learn/javascript-best-practices-1/)
+ - [Making Responsive HTML Emails](http://www.benjystanton.co.uk/blog/making-responsive-html-emails/)
  - [Sweet alert](http://tristanedwards.me/sweetalert)
+ - [Perfmap](https://github.com/zeman/perfmap)
+ - [noUiSlider](http://refreshless.com/nouislider/)
 
 
 READMORE
