--- a/source/css/v2/layout.sass
+++ b/source/css/v2/layout.sass
@@ -40,6 +40,10 @@ header.header
   max-width: 960px
   padding: 20px
   margin: 0 auto
+  &:after
+    content: ''
+    display: block
+    height: 64px
 
 footer.footer
   background: #087c78
