--- a/source/css/v2/typography.sass
+++ b/source/css/v2/typography.sass
@@ -1,8 +1,20 @@
 body
   font-family: 'Helvetica Neue', Helvetica, sans-serif
   font-size: 1rem
+  font-weight: 300
   line-height: 1.5rem
-  color: #4f4436
+  color: #333
 
 h1
+  font-size: 1.25rem
+
+h2
+  font-size: 1.125rem
+
+h3
   font-size: 1rem
+  font-weight: normal
+a
+  color: #4f4436
+  &:hover
+    color: #a53719
