--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,20 +3,64 @@ pageable: true
 per_page: 10
 ---
 <% content_for :title, "" %>
-<% page_articles.each_with_index do |article, i| %>
-  <article>
-    <%= partial "partials/article", locals: { article: article } %>
-  </article>
-  <hr />
-<% end %>
-
-<% if paginate %>
-  <ul class="pagination">
-    <% if prev_page %>
-      <li><%= link_to '&laquo; Позже', prev_page %></li>
-    <% end %>
-    <% if next_page %>
-      <li><%= link_to 'Раньше &raquo;', next_page %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="row mbl">
+  <div class="col2of3 prm">
+    <article class="article">
+      <%= partial "partials/article", locals: { article: page_articles.first } %>
+    </article>
+  </div>
+  <div class="col1of3 prm">
+    <div class="by-center mbm">
+      <h3 class="mbs">Есть чем поделиться с нами?</h3>
+      <%= hex_mail_to default_email_helper, "Напишите нам письмо", class: 'button mbs' %>
+      <h3 class="mbs">или в чат:</h3>
+      <a href="https://gitter.im/rwpod/public"><img src="https://badges.gitter.im/rwpod/public.png" alt="Gitter chat" /></a>
+    </div>
+    <div class="mbl">
+      <h2>Архив</h2>
+      <ul class="side-nav">
+        <% blog.articles.group_by {|a| a.date.year }.each do |year, articles| %>
+          <li><a href="<%= blog_year_path year %>"><%= year %> (<%= articles.size %>)</a></li>
+        <% end %>
+      </ul>
+    </div>
+    <div class="hide-for-small hide-for-medium show-for-landscape">
+      <a class="twitter-timeline" href="https://twitter.com/rwpod" data-widget-id="293816296280297473">Твиты пользователя @rwpod</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
+  </div>
+</div>
+<div class="row mbm">
+  <% page_articles[1..-1].each_with_index do |article, i| %>
+    <div class="column">
+      <div class="box">
+        <div class="header row">
+          <div class="left"><%= article.title.split('.')[0] %></div>
+          <div class="right"><%= article.date.strftime('%d.%m.%Y') %></div>
+        </div>
+        <div class="content">
+          <h2>
+            <% link_to article do %>
+              <%= article.title %>
+            <% end %>
+          </h2>
+        </div>
+        <div class="footer">
+          <%= link_to "0 Comments and 0 Reactions", "#{default_main_url_helper}#{article.url}#disqus_thread" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
+<div class="row">
+  <% if paginate %>
+    <div class="pagination right">
+      <% if prev_page %>
+        <%= link_to '&laquo; Позже', prev_page, class: 'button' %>
+      <% end %>
+      <% if next_page %>
+        <%= link_to 'Раньше &raquo;', next_page, class: 'button' %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
