--- a/source/css/v2/typography.sass
+++ b/source/css/v2/typography.sass
@@ -18,3 +18,9 @@ a
   color: #4f4436
   &:hover
     color: #a53719
+
+hr
+  border: 0
+  height: 0
+  border-top: 1px solid #d2cec3
+  margin: 20px 0
