--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,24 +10,7 @@ per_page: 10
     </article>
   </div>
   <div class="col1of3 prm">
-    <div class="by-center mbm">
-      <h3 class="mbs">Есть чем поделиться с нами?</h3>
-      <%= hex_mail_to default_email_helper, "Напишите нам письмо", class: 'button mbs' %>
-      <h3 class="mbs">или в чат:</h3>
-      <a href="https://gitter.im/rwpod/public"><img src="https://badges.gitter.im/rwpod/public.png" alt="Gitter chat" /></a>
-    </div>
-    <div class="mbl">
-      <h2>Архив</h2>
-      <ul class="side-nav">
-        <% blog.articles.group_by {|a| a.date.year }.each do |year, articles| %>
-          <li><a href="<%= blog_year_path year %>"><%= year %> (<%= articles.size %>)</a></li>
-        <% end %>
-      </ul>
-    </div>
-    <div class="hide-for-small hide-for-medium show-for-landscape">
-      <a class="twitter-timeline" href="https://twitter.com/rwpod" data-widget-id="293816296280297473">Твиты пользователя @rwpod</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    </div>
+    <%= partial "partials/sidebar" %>
   </div>
 </div>
 <div class="row mbm">
