--- a/source/css/v2.sass
+++ b/source/css/v2.sass
@@ -3,7 +3,9 @@
 @import "v2/typography"
 @import "v2/layout"
 
+@import "v2/objects/icons"
 @import "v2/objects/navigation"
+@import "v2/objects/subscribe"
 @import "v2/objects/article"
 @import "v2/objects/button"
 @import "v2/objects/box"
