--- a/source/css/v2/objects/article.sass
+++ b/source/css/v2/objects/article.sass
@@ -3,11 +3,14 @@
   border: 1px solid #e0e0e0
   .header
     background: #087c78
-    color: rgba(255,255,255,.9)
+    color: #fff
     padding: 15px 20px
+    small
+      color: #f2f3f3
   .content
     padding: 20px
-
+  .footer .icon-chat:before
+    margin-right: 5px
   img
     border: 1px solid #d2cec3
     width: 130px
