--- a/source/css/v2/objects/box.sass
+++ b/source/css/v2/objects/box.sass
@@ -11,9 +11,15 @@
     .header
       padding: 10px 20px
       border-bottom: 1px solid #d2cec3
+      small
+        color: #928e81
     .content
       padding: 20px
       min-height: 180px
     .footer
       border-top: 1px solid #d2cec3
       padding: 5px 20px
+      .icon-chat:before
+        position: relative
+        top: 1px
+        margin-right: 5px
