--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ pageable: true
 per_page: 10
 ---
 <% content_for :title, "" %>
-<div class="row mbl">
+<div class="row mbm">
   <div class="col2of3 prm">
     <article class="article">
       <%= partial "partials/article", locals: { article: page_articles.first } %>
@@ -19,7 +19,9 @@ per_page: 10
       <div class="box">
         <div class="header row">
           <div class="left"><%= article.title.split('.')[0] %></div>
-          <div class="right"><%= article.date.strftime('%d.%m.%Y') %></div>
+          <% if article.title.split('.')[0].size < 20%>
+            <div class="right"><small><%= article.date.strftime('%d.%m.%Y') %></small></div>
+          <%end%>
         </div>
         <div class="content">
           <h2>
@@ -29,13 +31,13 @@ per_page: 10
           </h2>
         </div>
         <div class="footer">
-          <%= link_to "0 Comments and 0 Reactions", "#{default_main_url_helper}#{article.url}#disqus_thread" %>
+          <%= link_to "0 Comments and 0 Reactions", "#{default_main_url_helper}#{article.url}#disqus_thread", class: 'icon-chat' %>
         </div>
       </div>
     </div>
   <% end %>
 </div>
-<div class="row">
+<div class="row prm">
   <% if paginate %>
     <div class="pagination right">
       <% if prev_page %>
