--- a/source/static_pages/about.html.erb
+++ b/source/static_pages/about.html.erb
@@ -5,44 +5,42 @@ per_page: 25
 title: "О нас"
 ---
 
-<div class="row">
-  <div class="twelve columns">
-    <h1>О нас</h1>
+<div class="author mbl">
+  <div class="photo">
+    <%= image_tag "about/alexey.png", alt: "Алексей Васильев" %>
   </div>
-</div>
-
-<div class="row">
-  <div class="large-4 columns hide-for-small">
-    <%= image_tag "about/alex.png", alt: "Александр Чаплинский" %>
-  </div>
-  <div class="large-8 columns">
-    <h3>Александр Чаплинский</h3>
-    <ul class="inline-list people-social-icons">
-      <li><a class="fc-webicon twitter" href="https://twitter.com/a1chapone">Twitter</a></li>
-      <li><a class="fc-webicon github" href="https://github.com/alchapone">Github</a></li>
-      <li><a class="fc-webicon linkedin" href="http://www.linkedin.com/pub/alexander-chaplinsky/34/2a3/3a0">Linkedin</a></li>
-      <li><a class="fc-webicon facebook" href="http://www.facebook.com/profile.php?id=1433185383">Facebook</a></li>
-      <li><a class="fc-webicon googleplus" href="https://plus.google.com/102030190358547710801/about">GooglePlus</a></li>
-    </ul>
-    <p>Ruby on Rails, JavaScript разработчик и cпециалист по верстке в компании Railsware. Является автором таких продуктов как: <a href="https://github.com/railsware/smt_rails">SmtRails</a>, <a href="http://piro.railsware.com">PIRO</a>, <a href="https://github.com/alchapone/smartstart">SmartStart</a>, <a href="https://github.com/alchapone/ajaxform">AjaxForm</a> и многих других.</p>
-    <p>Александр является инструктором по верстке в компании Railsware.</p>
-  </div>
-</div>
-
-<div class="row">
-  <div class="large-8 columns">
-    <h3>Алексей Васильев</h3>
-    <ul class="inline-list people-social-icons">
-      <li><a class="fc-webicon twitter" href="https://twitter.com/leopard_me">Twitter</a></li>
-      <li><a class="fc-webicon github" href="https://github.com/le0pard">Github</a></li>
-      <li><a class="fc-webicon linkedin" href="http://www.linkedin.com/in/le0pard">Linkedin</a></li>
-      <li><a class="fc-webicon facebook" href="http://www.facebook.com/leopard.not.a">Facebook</a></li>
-      <li><a class="fc-webicon googleplus" href="https://plus.google.com/108647800055603756903/about">GooglePlus</a></li>
-    </ul>
+  <div class="bio last-col">
+    <h1 class="mbm">Алексей Васильев</h1>
+    <div class="contacts">
+      <a class="icon-twitter" href="https://twitter.com/leopard_me" target="_blank"></a>
+      <a class="icon-github" href="https://github.com/le0pard" target="_blank"></a>
+      <a class="icon-linkedin" href="http://www.linkedin.com/in/le0pard" target="_blank"></a>
+      <a class="icon-facebook" href="http://www.facebook.com/leopard.not.a" target="_blank"></a>
+      <a class="icon-google-plus" href="https://plus.google.com/108647800055603756903/about" target="_blank"></a>
+    </div>
     <p>Ruby on Rails разработчик и Linux администратор в компании Railsware. Является автором таких продуктов как: <a href="http://popcornua.coocoorooza.com/">PopCornUA</a>, <a href="http://mongodb-logger.catware.org/">MongodbLogger</a>, <a href="https://github.com/railsware/smt_rails">SmtRails</a>, <a href="http://piro.railsware.com">PIRO</a> и многих других.</p>
     <p>Алексей является автором открытого учебного пособия по <a href="http://postgresql.leopard.in.ua">PostgreSQL на русском языке</a>. Активный докладчик в различных IT конференциях.</p>
   </div>
-  <div class="large-4 columns hide-for-small">
-    <%= image_tag "about/alexey.png", alt: "Алексей Васильев" %>
+</div>
+
+<div class="author inverse mbl">
+  <div class="bio">
+    <h1 class="mbm">Александр Чаплинский</h1>
+    <div class="contacts">
+      <a class="icon-twitter" href="https://twitter.com/a1chapone" target="_blank"></a>
+      <a class="icon-github" href="https://github.com/alchapone" target="_blank"></a>
+      <a class="icon-linkedin" href="http://www.linkedin.com/pub/alexander-chaplinsky/34/2a3/3a0" target="_blank"></a>
+      <a class="icon-facebook" href="http://www.facebook.com/profile.php?id=1433185383" target="_blank"></a>
+      <a class="icon-instagram" href="http://instagram.com/a1chapone" target="_blank"></a>
+    </div>
+    <p>Ruby on Rails, JavaScript разработчик и cпециалист по верстке в компании Railsware.
+      Является автором таких продуктов как: <a href="https://github.com/alchapone/polymer-rails">polymer-rails</a>,
+      <a href="https://github.com/railsware/applepie">ApplePie</a>,
+      <a href="https://github.com/railsware/smt_rails">SmtRails</a>,
+      <a href="http://piro.railsware.com">PIRO</a> и многих других.</p>
+    <p>Александр является инструктором по верстке в компании Railsware.</p>
+  </div>
+  <div class="photo">
+    <%= image_tag "about/alex.png", alt: "Александр Чаплинский" %>
   </div>
 </div>
